[package]
name = "sample-server"
version = "0.1.0"
authors = ["Jimmy Hartzell <jah259@cornell.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
thiserror = "1.0"
color-eyre = "0.5"
